# wdxtaglib

./: .cproject  .project  .travis.yml  CMakeLists.txt  History.md  Introduction.md  ProjectHome.md  README.md  Uninstallation.md  WDXTagLib.cbp  appveyor.yml
branches/1.0.1-latest-taglib/: CMakeLists.txt
branches/1.0.1-latest-taglib/mk/: toolchain-cross-mingw32-linux.cmake
branches/1.0.1-latest-taglib/scripts/: build-all.sh  build-taglib.sh  build-wdx.sh
branches/1.1.0-64bit/res/: pluginst.inf
branches/1.1.0-64bit/scripts/: build-all.sh  build-taglib.sh  build-wdx.sh  make-release.sh
branches/1.1.0-64bit/src/: CUtils.cpp  CWDXBase.h  contentplug.h
branches/1.1.0-interna;-refactoring/doc/: readme.txt
branches/1.1.0-interna;-refactoring/scripts/: build-wdx.sh
branches/1.1.0-interna;-refactoring/src/: cunicode.cpp
branches/1.1.0-unicode/: CMakeLists.txt
branches/1.1.0-unicode/src/: CUtils.cpp  CUtils.h  CWDXBase.h  CWDXTagLib.cpp  CWDXTagLib.h  contentplug.h  main.h
branches/1.x/: .travis.yml  CMakeLists.txt
branches/1.x/doc/: contentplugin20.HLP  doxyfile
branches/1.x/res/: pluginst.inf
branches/1.x/scripts/: _env.sh  build-deps.sh  build-release-version.sh  build-release.sh  build-taglib.sh  build-wdx.sh
branches/1.x/src/: CUtils.cpp  CUtils.h  CWDXBase.cpp  CWDXBase.h  CWDXTagLib.cpp  CWDXTagLib.h  ContentPluginBase.cpp  CustomTypes.h  Fields.h  Plugin.cpp  base.cpp  base.h  cunicode.h  main.cpp  main.h  plugin.cpp  plugin.h
branches/1.x/taglib/include/: asftag.h  commentsframe.h  fileref.h  flacfile.h  mp4atom.h  mp4item.h  mp4tag.h  popularimeterframe.h  tbytevector.h  tfile.h  uniquefileidentifierframe.h  unknownframe.h
branches/1.x/tools/: run_me_to_build_release.cmd  src_files_to_release.txt  taglib.patch
branches/read_cache_enabled/release/: build_release.cmd
branches/read_cache_enabled/src/: main.cpp
doc/: WdxTagLib.url  contentplugin.HLP  readme.txt
mk/dependencies/: CMakeLists.txt  TagLib.cmake  zlib.cmake
release/: build_release.cmd
res/: pluginst.inf
scripts/: _env.sh  build-deps.sh  build-release-version.sh  build-taglib.sh
src/: CUtils.cpp  CUtils.h  CWDXBase.cpp  CWDXBase.h  CWDXTagLib.cpp  CWDXTagLib.h  ContentPluginBase.cpp  ContentPluginBase.h  CustomTypes.h  Fields.cpp  Fields.h  Plugin.cpp  Plugin.h  PluginBase.cpp  PluginBase.h  VerInfo.rc.template  WDXBase.cpp  WDXBase.h  WDXTagLib.cbp  WDXTagLib.cpp  WDXTagLib.h  WDXTagLibFields.cpp  WDXTagLibFields.h  base.cpp  base.h  contentplug.h  main.cpp  main.h  plugin.cpp  plugin.h  utils.cpp  utils.h
taglib/include/: asfattribute.h  asfproperties.h  asftag.h  attachedpictureframe.h  id3v2header.h  mp4atom.h  mp4file.h  mp4item.h  mp4properties.h  tag_c.h  tstring.h
taglib/release/include/: fileref.h  mp4tag.h  tdebug.h
tags/1.0.1/release/: build_release.cmd
tags/1.0.1/src/: CWDXTagLib.cpp
tags/1.1.0/scripts/: build-release.sh
tags/1.1.0/src/: CustomTypes.h
tags/1.1.1/: CMakeLists.txt
tags/1.1.1/scripts/: build-all.sh
tags/1.1.2/mk/: toolchain-cross-mingw32-linux.cmake
tags/1.1.2/scripts/: build-release.sh
tags/1.1.2/src/: utils.cpp
tools/: build_release.cmd  build_release.cmd.template  generate_verinfo.cmd  tc.launch  wincmd.ini
trunk/: .cproject  .travis.yml
trunk/doc/: contentplugin.HLP  read_before_install.txt  readme.txt
trunk/scripts/: _env.sh  build-deps.sh  build-wdx.sh  make-release.sh
trunk/src/: CUtils.cpp  CUtils.h  CWDXBase.cpp  CWDXBase.h  CWDXTagLib.cpp  CWDXTagLib.h  ContentPluginBase.cpp  ContentPluginBase.h  CustomTypes.h  Fields.cpp  Fields.h  Plugin.cpp  Plugin.h  PluginBase.cpp  PluginBase.h  VerInfo.rc.template  WDXBase.cpp  WDXBase.h  WDXTagLib.cbp  WDXTagLib.cpp  WDXTagLib.h  WDXTagLibFields.h  base.cpp  contentplug.h  main.cpp  main.h  readme.txt  utils.cpp  utils.h  version.h
trunk/taglib/include/: asfattribute.h  asffile.h  asfproperties.h  id3v1genres.h  id3v1tag.h  mp4coverart.h  oggpage.h  popularimeterframe.h  relativevolumeframe.h  taglib.h  textidentificationframe.h
trunk/taglib/release/include/: id3v1tag.h  id3v2footer.h  mp4file.h  taglib.h  tbytevector.h  tstring.h
trunk/tools/: binary_files_to_release.txt  build_release.cmd  files_to_exclude.txt  generate_verinfo.cmd  wdxtaglib.ini
wiki/: History.wiki  Installation.wiki  Introduction.wiki  Readme.wiki  TableOfContents.wiki  Uninstallation.wiki  Usage.wiki
